# Controls

./: .clang-format  .clang-format-ignore  .clang-format.yaml  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  SSRT_Control_Analysis.ipynb  SSRT_Control_Analysis_Simplified_Car_Model.ipynb  eStopArduino.ino  eStopCode.c  emergencyStopRover.ino  setup.sh  ultrasonicSensor.ino
ControlsArm2/ControlsArm/: README.md
joystickWireless/: baseNUC.py  roverNUC  roverNUC.py
lightsControl/: applyBrightness.ino  setBrightness.py
pollingRover/: change.py  main.py  motor__init.py  orientation.py
prj/: Configs.h  Logging.cpp  Logging.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  MessageQueueTest.cpp  Queue.cpp  Queue.h  README.md  UDPHandler.cpp  UDPHandler.h  main.cpp  mission_control.h  pub_general.h  websocket.cpp  websocket.h
prj/Base/: ArmProcessor.cpp  ArmProcessor.h  Base.cpp  Base.h  Controller.cpp  Controller.h  ControllerHandler.cpp  ControllerHandler.h  ControllerTesting.cpp  DriveProcessor.cpp  DriveProcessor.h
prj/Config/: Config.cpp  Config.h  config.json
prj/Controller/: ArmControllerLayout.cpp  ArmControllerLayout.h  ArmFixedIKControllerLayout.cpp  ArmFixedIKControllerLayout.h  ArmIKControllerLayout.cpp  ArmIKControllerLayout.h  ArmManualControllerLayout.cpp  ArmManualControllerLayout.h  (+14 more)
test/: CMakeLists.txt  ControllerTesting.cpp  MessageQueueTest.cpp  controllerTest.cpp
test/unit_tests/: test_base.cc  test_ik.cc  test_queue.cc  test_rover.cc  test_websockets.cc
websocket_banished/: websocket.cpp
(+101 files in other folders)
